# ArduinoCMake

./: .gitignore  Arduino.cmake  ArduinoLibraryWire.cmake  ArduinoMega2560.cmake  ArduinoProMini3V328.cmake  ArduinoUno.cmake  CMakeLists.txt  LICENSE  README.md
cmake/: Arduino.cmake  ArduinoLibraryArdUtils.cmake  ArduinoMega1280.cmake  ArduinoProMini3V168.cmake  ArduinoProMini5V168.cmake  ArduinoProMini5V328.cmake
examples/: CMakeLists.txt
include/: README.md
scripts/: Arduino.cmake  ArduinoMega2560.cmake  ArduinoUno.cmake
